# refrakt-backend

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  worker_main.py
api/: __init__.py  routes.py
config/: PROMPT.md  __init__.py  prompt.md  settings.py
middleware/: __init__.py  request_id.py  request_tracker.py  security_headers.py
models/: __init__.py  job_models.py
services/: __init__.py  admission_control.py  ai_service.py  assistant_service.py  document_service.py  embedding_service.py  gpu_scheduler.py  job_context_service.py  job_executor.py  job_repository.py  job_service.py  job_worker_settings.py  metrics.py  observability.py  queue.py  queue_monitor.py  r2_service.py  rate_limiter.py  websocket_service.py
utils/: __init__.py  artifact_classifier.py  config_validator.py  logging_config.py  prompt_loader.py  vector_store.py
